welcome.lessons.welcome.array.maxvalue.MaxValue.scala.error
maxValue:5: error: reassignment to val
			i = valeur
                          ^maxValue:8: error: not found: value valeur
	return (valeur)
                ^